ahora quiero que las notificaciones sean cada 5 mins, es decir, a las 00

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -9,8 +9,7 @@ runConfig:
 # Defines scheduled jobs for the backend.
 # https://firebase.google.com/docs/app-hosting/configure#scheduled-jobs
 scheduledJobs:
-  - schedule: "every day 16:35"
-    timeZone: "Europe/Madrid" # Use a specific timezone
+  - schedule: "every 5 minutes"
     http:
       path: /api/cron/send-reminders
       method: GET
