--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,22 @@
 {
-    "name": "NutriTrackAI",
-    "short_name": "NutriTrackAI",
-    "description": "Track your nutrition with the power of AI.",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#34d399",
-    "icons": [
-        {
-            "src": "/leaf.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/leaf.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "DietLogAI",
+  "short_name": "DietLogAI",
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#f1f8e9",
+  "description": "Track your nutrition with the power of AI.",
+  "theme_color": "#f1f8e9",
+  "gcm_sender_id": "103953800507",
+  "icons": [
+    {
+      "src": "/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
