--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
   "name": "DietLogAI",
   "short_name": "DietLogAI",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#f1f8e9",
+  "theme_color": "#689f38",
   "description": "Track your nutrition with the power of AI.",
-  "theme_color": "#f1f8e9",
   "gcm_sender_id": "103953800507",
   "icons": [
     {
