--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#f1f8e9",
-  "theme_color": "#689f38",
+  "theme_color": "#f1f8e9",
   "description": "Track your nutrition with the power of AI.",
   "gcm_sender_id": "103953800507",
   "icons": [
