--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,20 @@
 {
   "name": "DietLogAI",
   "short_name": "DietLogAI",
+  "icons": [
+    {
+      "src": "/leaf.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/leaf.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
   "start_url": ".",
   "display": "standalone",
   "background_color": "#f1f8e9",
